tests/ui/type_state_invalid_aggregate.stderr
error[E0308]: mismatched types
 --> tests/ui/type_state_invalid_aggregate.rs:6:51
  |
6 |     let _ = SimulatedAggregator::aggregate_shares(session, shares);
  |             ------------------------------------- ^^^^^^^ expected `SigningTranscript`, found `SigningSession<...>`
  |             |
  |             arguments to this function are incorrect
  |
  = note: expected struct `SigningTranscript`
             found struct `SigningSession<AwaitingPartialSignatures>`
note: associated function defined here
 --> src/aggregation.rs
  |
  |     fn aggregate_shares(
  |        ^^^^^^^^^^^^^^^^
